# billiard_ball

./: .gitignore  CMakeLists.txt  Makefile  README.md  open
config/: background.config  billiard_ball.config  score_board.config
res/text/: rules
src/: CMakeLists.txt  Makefile  background.c  background.h  ball.c  ball.h  button.c  button.h  commons.c  commons.h  cue.c  cue.h  game.c  game.h  main.c  main.h  menu.c  menu.h  message.c  message.h  score_board.c  score_board.h  table.c  table.h
